--- a/app/template/scss/_base.scss
+++ b/app/template/scss/_base.scss
@@ -637,6 +637,7 @@ footer{
 		@extend .italic;
 		display: flex;
 		flex-direction: column;
+		flex-shrink: 0;
 		justify-content: center;
 		width: 900px;
 		a{
