--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -519,6 +519,7 @@ footer {
 .footer__cities {
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   justify-content: center;
   width: 900px; }
   .footer__cities a {
@@ -1829,6 +1830,8 @@ tbody.collapse.show {
 /* =/mobile-menu
 ---------------------------*/
 @media (max-width: 767px) {
+  .show-sm {
+    display: block; }
   .navbar-toggle {
     background-color: green;
     border: none;
@@ -1993,3 +1996,279 @@ tbody.collapse.show {
 
 ::-ms-clear {
   display: none; }
+
+@media (max-width: 1400px) {
+  .footer__cities {
+    width: 817px; }
+  .footer__social-icons {
+    margin-left: 1.2rem; } }
+
+@media (max-width: 1199px) {
+  .contacts {
+    flex-shrink: 0; }
+  .footer__cities {
+    width: 640px; }
+  .footer__social-icons {
+    margin-left: 1.2rem; }
+  .footer__navcopyright {
+    width: 520px; }
+    .footer__navcopyright .nav {
+      padding-right: 1rem;
+      width: 100%; } }
+
+@media (max-width: 991px) {
+  .header .contacts {
+    margin-left: .5rem; }
+  .text,
+  .partners {
+    text-align: justify; }
+  .footer__top {
+    text-align: center;
+    height: auto; }
+    .footer__top .flexbox {
+      flex-flow: column; }
+  .footer__bottom {
+    text-align: center; }
+    .footer__bottom .flexbox {
+      display: block; }
+  .footer__logo {
+    display: none; }
+  .footer__cities {
+    padding: 2rem 0;
+    width: auto; }
+  .footer__social-icons {
+    padding-bottom: 1rem;
+    width: auto; }
+    .footer__social-icons a {
+      margin: 0 .5rem; }
+  .footer__navcopyright {
+    width: auto; }
+  .contacts-footer {
+    background: none;
+    color: #000;
+    height: auto;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    width: auto; }
+    .contacts-footer a {
+      color: #333; }
+  .kreotif {
+    line-height: 1.6;
+    margin-left: 0;
+    text-align: center; } }
+
+@media (max-width: 767px) {
+  body {
+    display: block; }
+  .header .contacts {
+    display: none; }
+  .neck .logo {
+    text-align: center;
+    width: auto; }
+  .neck .writeus-link {
+    margin-left: 0;
+    position: static; } }
+
+@media (max-width: 650px) {
+  .feedback__form .row {
+    display: block;
+    margin-bottom: 0; }
+    .feedback__form .row .form-control {
+      width: 100% !important; }
+  .feedback__form .submit {
+    margin-left: 0;
+    width: 100%;
+    font-size: 15px;
+    font-size: 1.5rem; } }
+
+@media (max-width: 550px) {
+  .footer__navcopyright .nav {
+    display: block; }
+    .footer__navcopyright .nav li {
+      margin-bottom: .8rem; }
+  .footer__navcopyright .copyright {
+    padding-top: 1rem; }
+  .footer__social-icons {
+    justify-content: center; } }
+
+@media (max-width: 500px) {
+  .title {
+    text-align: center; } }
+
+@media (max-width: 1650px) {
+  .neck .logo {
+    position: relative;
+    top: -2rem; }
+  .slider__text {
+    top: 150px; } }
+
+@media (max-width: 1600px) {
+  .about {
+    height: auto;
+    padding-top: 0;
+    top: 2rem;
+    padding-bottom: 3rem; } }
+
+@media (max-width: 1500px) {
+  .about {
+    top: 4rem; }
+  .slider .bx-controls .bx-pager {
+    top: 200px; } }
+
+@media (max-width: 1399px) {
+  .about {
+    top: 7rem; }
+  .slider__text {
+    top: 130px; }
+  .about {
+    padding-bottom: 7rem; }
+  .rubrics #tab-articles .flexbox,
+  .rubrics #tab-faq .flexbox,
+  .rubrics #tab-news .flexbox,
+  .rubrics #tab-reviews .flexbox {
+    width: 100%; } }
+
+@media (max-width: 1300px) {
+  .neck .logo {
+    position: relative;
+    top: -4rem; }
+  .about {
+    top: 9rem; }
+  .slider__text {
+    top: 120px; }
+  .slider .bx-controls .bx-pager {
+    top: 150px; } }
+
+@media (max-width: 1199px) {
+  .slider__text {
+    top: 110px; }
+  .about {
+    padding-bottom: 9rem;
+    width: 46rem; } }
+
+@media (max-width: 1150px) {
+  .slider__text {
+    left: 0;
+    margin-left: 10px;
+    top: 105px; }
+  .about {
+    padding-bottom: 11rem;
+    top: 11rem; }
+  .partners__items {
+    flex-wrap: wrap; } }
+
+@media (max-width: 1100px) {
+  .slider__text {
+    top: 95px; }
+  .about {
+    padding-bottom: 13rem;
+    top: 13rem; } }
+
+@media (max-width: 991px) {
+  .slider {
+    display: none; }
+  .neck {
+    margin-top: 3rem;
+    position: static; }
+    .neck .logo {
+      position: static;
+      margin-left: auto;
+      margin-right: auto;
+      width: 320px; }
+  .about {
+    text-align: justify;
+    top: 0;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    width: 100%; }
+    .about .more {
+      margin-top: 2rem;
+      text-align: center !important; }
+  .sqicons__item {
+    padding-left: 0;
+    padding-right: 3rem; }
+  .rubrics__body .news:nth-child(4n),
+  .rubrics__body .article:nth-child(4n),
+  .rubrics__body .rubrics__faq:nth-child(4n),
+  .rubrics__body .rubrics__reviews:nth-child(4n) {
+    display: none; }
+  .rubrics__body .rubrics__reviews-item {
+    min-height: 24rem; } }
+
+@media (max-width: 800px) {
+  .feedback__form {
+    width: 95%; }
+    .feedback__form .row input.form-control {
+      width: 32%; } }
+
+@media (max-width: 767px) {
+  .rubrics__nav {
+    display: none; }
+  .rubrics .tab {
+    display: block !important; }
+  .rubrics__body .news:nth-child(4n),
+  .rubrics__body .article:nth-child(4n),
+  .rubrics__body .rubrics__faq:nth-child(4n),
+  .rubrics__body .rubrics__reviews:nth-child(4n) {
+    display: block; }
+  .rubrics__body .flexbox {
+    flex-wrap: wrap; }
+  .rubrics__body .news,
+  .rubrics__body .article,
+  .rubrics__body .rubrics__faq,
+  .rubrics__body .rubrics__reviews {
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem; } }
+
+@media (max-width: 600px) {
+  .sqicons__item {
+    flex-basis: 100%;
+    padding-right: 0; } }
+
+@media (max-width: 516px) {
+  .rubrics__body .title {
+    text-align: center; }
+  .rubrics__body .article {
+    width: 220px; }
+  .rubrics__body .news,
+  .rubrics__body .article,
+  .rubrics__body .rubrics__faq,
+  .rubrics__body .rubrics__reviews {
+    margin-right: 0;
+    margin-bottom: 2.5rem; } }
+
+@media (max-width: 500px) {
+  .neck {
+    margin-top: 5px; }
+    .neck .logo {
+      width: 250px; }
+      .neck .logo img {
+        max-width: 100%; }
+  .rubrics__body .tab {
+    margin-top: 3rem; }
+  .rubrics__body .flexbox {
+    margin-bottom: -1rem !important; }
+  .rubrics__body .more {
+    margin-top: 0; } }
+
+@media (max-width: 450px) {
+  .services__item {
+    width: 280px; }
+  .owl-nav {
+    display: none; } }
+
+@media (max-width: 420px) {
+  .neck .logo {
+    margin-left: 22%; } }
+
+@media (max-width: 400px) {
+  .services__item {
+    width: 260px; } }
+
+@media (max-width: 370px) {
+  .neck .logo {
+    width: 220px; } }
+
+@media (max-width: 370px) {
+  .services__item {
+    width: 250px; } }
