--- a/app/template/scss/_responsive-pages.scss
+++ b/app/template/scss/_responsive-pages.scss
@@ -243,6 +243,22 @@
 				margin-bottom: 2.5rem;
 			}
 		}
+
+		&__faq-title,
+		&__reviews-title{
+			height: auto;
+			padding-bottom: 1.5rem;
+			margin-bottom: 0;
+		}
+
+		&__reviews-item{
+			min-height: 0 !important;
+		}
+	}
+
+	.news__title{
+		height: auto;
+		padding-bottom: 1rem;
 	}
 }
 
@@ -297,6 +313,17 @@
 @media (max-width: 400px){
 	.services__item{
 		width: 260px;
+	}
+
+	.sqicons{
+		&__item{
+			flex-flow: column;
+			align-items: center;
+			text-align: center;
+		}
+		&__text{
+			padding-left: 0;
+		}
 	}
 }
 
