--- a/app/template/scss/_responsive-pages.scss
+++ b/app/template/scss/_responsive-pages.scss
@@ -87,6 +87,10 @@
 		padding-bottom: 9rem;
 		width: 46rem;
 	}
+
+	.team__item{
+		padding-right: 2rem;
+	}
 }
 
 @media (max-width: 1150px){
@@ -164,6 +168,10 @@
 			min-height: 24rem
 		}
 	}
+
+	.team__item{
+		flex-basis: 50%;
+	}
 }
 
 
@@ -201,6 +209,53 @@
 			.rubrics__reviews{
 				margin-right: 1.5rem;
 				margin-bottom: 1.5rem;
+			}
+		}
+	}
+
+	.team__name{
+		a{
+			color: $color1;
+		}
+	}
+}
+
+
+@media (max-width: 650px){
+	.team{
+		&__item{
+			flex-basis: 100%;
+			margin-top: 4rem;
+			padding-right: 0;
+			:after{
+				display: none !important;
+			}
+		}
+		
+		&__link{
+			display: block;
+			flex-basis: 100%;
+			text-align: center;
+		}
+		&__cell{
+			padding-top: .5rem;
+			padding-left: 0;
+			width: 100%;
+		}
+		.infomodal{
+			bottom: 0;
+			position: fixed;
+			z-index: 9999;
+			.modal-dialog{
+				overflow: auto;
+				margin: 0;
+				position: static;
+			}
+			.close{
+				right: 20px;
+			}
+			.modal__text{
+				text-align: justify;
 			}
 		}
 	}
