--- a/app/template/scss/_responsive-base.scss
+++ b/app/template/scss/_responsive-base.scss
@@ -67,13 +67,14 @@
 
 
 	.table-responsive {
+		max-width: 100%;
 		display: block;
 		width: 100%;
 		overflow-x: auto;
 		-ms-overflow-style: -ms-autohiding-scrollbar;
 	}
 
-	
+
 	.text,
 	.partners{
 		text-align: justify;
