--- a/app/template/scss/_responsive-pages.scss
+++ b/app/template/scss/_responsive-pages.scss
@@ -95,6 +95,25 @@
 	.gallery__item{
 		padding-right: 1%;
 	}
+
+
+	// our works
+	.photo, 
+	.video{
+		&__item{
+			min-height: 0;
+			margin: 1.4rem 0;
+			a{
+				width: 95%;
+			}
+		}
+		&__pic{
+			min-height: 0;
+		}
+		&__title{
+			@include font-size(2.1)
+		}
+	}
 }
 
 @media (max-width: 1150px){
@@ -188,6 +207,15 @@
 	.youtube{
 		max-width: 100%;
 		max-height: 380px;
+	}
+
+
+	// our works
+	.photo, 
+	.video{
+		&__item{
+			flex-basis: 50%
+		}
 	}
 }
 
@@ -298,6 +326,18 @@
 
 	.youtube{
 		max-height: 300px;
+	}
+
+
+	// our-works
+	.photo, 
+	.video{
+		&__item{
+			margin-left: auto;
+			margin-right: auto;
+			max-width: 350px;
+			flex-basis: 100%
+		}
 	}
 }
 
@@ -434,6 +474,14 @@
 	#ymap{
 		height: 300px;
 	}
+
+	// our-works
+	.photo, 
+	.video{
+		&__title{
+			@include font-size(1.8)
+		}
+	}
 }
 
 
@@ -451,6 +499,10 @@
 		&__text{
 			padding-left: 0;
 		}
+	}
+
+	.subcat ul li span{
+		font-weight: bold;
 	}
 }
 
