--- a/app/template/css/styles.css
+++ b/app/template/css/styles.css
@@ -2226,7 +2226,10 @@ tbody.collapse.show {
   .photo__title,
   .video__title {
     font-size: 21px;
-    font-size: 2.1rem; } }
+    font-size: 2.1rem; }
+  .articles {
+    padding-left: 0;
+    padding-right: 0; } }
 
 @media (max-width: 1150px) {
   .slider__text {
@@ -2287,7 +2290,10 @@ tbody.collapse.show {
     max-height: 380px; }
   .photo__item,
   .video__item {
-    flex-basis: 50%; } }
+    flex-basis: 50%; }
+  .articles .article {
+    margin-right: 2rem;
+    width: 219px; } }
 
 @media (max-width: 800px) {
   .feedback__form {
@@ -2314,7 +2320,18 @@ tbody.collapse.show {
     margin-right: 1.5rem;
     margin-bottom: 1.5rem; }
   .team__name a {
-    color: #000; } }
+    color: #000; }
+  .articles .article {
+    margin-right: 1.2rem;
+    width: 219px; } }
+
+@media (max-width: 740px) {
+  .articles .article {
+    margin-right: 0;
+    flex-basis: 50%; }
+    .articles .article__link {
+      margin-left: auto;
+      margin-right: auto; } }
 
 @media (max-width: 650px) {
   .team__item {
@@ -2400,7 +2417,9 @@ tbody.collapse.show {
     min-height: 0 !important; }
   .news__title {
     height: auto;
-    padding-bottom: 1rem; } }
+    padding-bottom: 1rem; }
+  .articles .article {
+    flex-basis: 100%; } }
 
 @media (max-width: 500px) {
   .neck {
