--- a/app/template/scss/_responsive-pages.scss
+++ b/app/template/scss/_responsive-pages.scss
@@ -121,6 +121,11 @@
 		padding-left: 0;
 		padding-right: 0;
 	}
+
+	.accordion{
+		margin-left: 0;
+		margin-right: 0;
+	}
 }
 
 @media (max-width: 1150px){
@@ -233,6 +238,11 @@
 			width: 219px;
 		}
 	}
+
+
+	main.text .columns .column{
+		padding-right: 4rem;
+	}
 }
 
 
@@ -285,6 +295,15 @@
 		.article{
 			margin-right: 1.2rem;
 			width: 219px;
+		}
+	}
+
+	main.text .columns{
+		// display: block;
+		flex-direction: column;
+		padding-right: 2rem;
+		.column{
+			padding-right: 0;
 		}
 	}
 }
