--- a/app/template/scss/_inner.scss
+++ b/app/template/scss/_inner.scss
@@ -85,8 +85,8 @@ main.text{
 		}
 	}
 	&__body{
-		padding-left: 1.7rem;
 		padding-bottom: 1rem;
+		padding: 0 1.5rem 1rem 1.7rem;
 		li{
 			margin: .5rem 0;
 		}
