Поправлена страница ошибки

--- a/app/template/scss/_base.scss
+++ b/app/template/scss/_base.scss
@@ -263,7 +263,8 @@ header:not(.header){
 	}
 	.contacts{
 		flex-shrink: 0;
-		margin-left: 2.5rem;
+		// margin-left: 2.5rem;
+		margin-left: 5.5rem;
 	}
 
 	.logo{
